# Dashboard_ISGAME

./: Resultados_Pesquisas.xlsx  app.py  pyproject.toml  requirements.txt
dados/AMEIDOSOCA/: resultado_final.xlsx  ~$resultado_final.xlsx
dados/IC2024/: resultado_final.xlsx
dados/IC2025/: resultado_final.xlsx
dados/IC2026/: resultado_final.xlsx
dados/IMEL2026/: resultado_final.xlsx
dados/Policlínica Aparecida/: resultado_final.xlsx
dados/Policlínica Areia Branca​/: resultado_final.xlsx
dados/Policlínica José Menino​/: resultado_final.xlsx
dados/Policlínica Ponta da Praia​/: resultado_final.xlsx
dados/SEMANAGRATIS/: .~lock.resultado_final.xls#  resultado_final.xls  resultado_final.xlsx
dados/Sociedade Melhoramentos/: resultado_final.xlsx
